--- a/Desktop/task/cinema/accounts/templates/registration/login.html
+++ b/Desktop/task/cinema/accounts/templates/registration/login.html
@@ -12,5 +12,7 @@
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
     <label class="form-check-label" for="exampleCheck1">Check me out</label>
   </div></br>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Login</button></br></br>
+  <a href='http://localhost:8000/accounts/home/register'>New User Registration</a>
+
 </form>
