--- a/Desktop/task/cinema/accounts/templates/registration/home.html
+++ b/Desktop/task/cinema/accounts/templates/registration/home.html
@@ -1,2 +1,14 @@
 <h1>Home page</h1>
 
+<!--<a href='http://localhost:8000/accounts/home/register'>Register</a><br><br>-->
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#menu">Menu</a>
+  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  <a href='http://localhost:8000/accounts/home/login'>Login<a/>
+</nav>
+</div>
+
+
