--- a/Desktop/task/cinema/accounts/templates/registration/register.html
+++ b/Desktop/task/cinema/accounts/templates/registration/register.html
@@ -1,12 +1,37 @@
-{% block title %}Create an Account{% endblock %}
+<!--{% block title %}Create an Account{% endblock %}-->
 
-{% block content %}
-<h1>Register...</h1>
-<br/><br/>
-<div class="form-group">
-  <form method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button class="btn btn-success">Register</button>
-  </form>
-{% endblock %}
+<!--{% block content %}-->
+<!--<h1>New User Registration</h1>-->
+<!--<br/><br/>-->
+<!--<div class="form-group">-->
+<!--  <form method="POST">-->
+<!--    {% csrf_token %}-->
+<!--    {{form.as_p}}-->
+<!--    <button class="btn btn-success">Register</button>-->
+<!--  </form>-->
+<!--{% endblock %}-->
+
+  <h3>New User Registration</h3>
+
+    <label for="fname">First name</label><br>
+    <input type="text" id="fname" name="fname" placeholder="Enter Your Name"><br></br>
+    <label for="lname">Last name</label><br>
+    <input type="text" id="lname" name="lname" placeholder="Enter Your Name"><br><br>
+    <label for="birthday">Date of Birth:</label>
+    <input type="date" id="birthday" name="birthday"></br></br>
+    <label for="email">Email</label>
+    <input type="text" placeholder="Enter Email" name="email" id="email" required>
+    </br></br>
+    <label for="psw">Password</label>
+    <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
+    <h5>Must be at least 8 characters long</h5>
+
+    <label for="psw-repeat">Retype Password</label>
+    <input type="password" placeholder="Retype Password" name="psw-repeat" id="psw-repeat" required></br></br>
+    <button type="submit" class="registerbtn">Create My Account</button>
+  </div>
+
+  <div class="container signin">
+    <p>Already have an account? <a href="http://localhost:8000/accounts/home/login">Sign in</a>.</p>
+  </div>
+</form>
